# pure-architecture-fastapi

./: .env.dist  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: pr_tests.yaml  setup.yaml
scripts/: lint.sh  linting.sh  start.sh  static_analysis.sh  test.sh  test_cov.sh
src/cats/: app.py  web.py
src/cats/api/: breeds.py  cats.py
src/cats/application/commands/cat/: add_cat.py  delete_cat_by_id.py  update_cat.py
src/cats/application/common/: interactor.py  transaction.py  validators.py
src/cats/application/common/errors/: base.py  breed.py  cat.py
src/cats/application/common/persistence/: breed.py  cat.py  filters.py  view_models.py
src/cats/application/common/ports/: breed.py  cat.py  transaction.py
src/cats/application/queries/breed/: get_breeds.py
src/cats/application/queries/cat/: get_cat_by_id.py  get_cats.py  get_cats_by_breed.py  output_shared.py
src/cats/bootstrap/: configs.py  db_tables.py  exc_handlers.py  ioc.py  log.py  middlewares.py  routes.py
src/cats/domain/models/: __init__.py  breed.py  cat.py
src/cats/entities/breed/: errors.py  models.py  services.py  value_objects.py
src/cats/entities/cat/: errors.py  models.py  services.py  value_objects.py
src/cats/entities/common/: base_entity.py  errors.py  tracker.py
src/cats/infrastructure/: configs.py
src/cats/infrastructure/adapters/: breed.py  cat.py  tracker.py  transaction.py
src/cats/infrastructure/bootstrap/: configs.py  ioc.py  log.py
src/cats/infrastructure/persistence/: db_provider.py
src/cats/infrastructure/persistence/alembic/: env.py
src/cats/infrastructure/persistence/alembic/versions/: 2024_12_20_2246-645a3bcf967c_init_tables.py
src/cats/infrastructure/persistence/models/: __init__.py  base.py  breed.py  cat.py
src/cats/presentation/http/common/: exc_handlers.py  schemes.py
src/cats/presentation/http/middlewares/: __init__.py  tracing.py
src/cats/presentation/http/routes/: __init__.py  breeds.py  cats.py  index.py
tests/integrations/: test_engine.py
tests/integrations/http/: conftest.py  test_breed_api.py  test_cat_api.py  test_index_api.py  test_middlewares.py
tests/mocks/common/: tracker.py  transaction.py
tests/mocks/gateways/: breed.py  cat.py
tests/unit/: conftest.py  test_errors.py  test_lifespans.py
tests/unit/application/: conftest.py
tests/unit/application/commands/: test_add_cat.py  test_delete_cat.py  test_update_cat.py
tests/unit/application/queries/: test_get_breeds.py  test_get_cat_by_id.py  test_get_cats.py  test_get_cats_by_breed.py
tests/unit/entities/: conftest.py  test_entities.py  test_services.py  test_tracker.py  test_value_objects.py
