[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "cats"
dynamic = ["version"]
description = "Simple api cats"
readme = "README.md"
authors = [
    { name = "Sergey Yavorsky", email = "maclovi.dev@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dishka==1.*",
    "uvloop==0.21.*",
    "orjson==3.*",
    "fastapi==0.115.*",
    "uvicorn==0.31.*",
    "httptools==0.6.*",
    "alembic==1.13.*",
    "sqlalchemy==2.*",
    "psycopg[binary]==3.*",
    "python-json-logger==2.*",
]

[project.optional-dependencies]
test = [
    "coverage[toml]==7.*",
    "pytest",
    "pytest-asyncio",
    "coverage==7.*",
    "httpx==0.28.*",
]
lint = [
    "ruff",
    "bandit",
    "semgrep",
    "codespell",
    #types
    "mypy",
]
dev = [
    "cats[test,lint]",
    "pre-commit==4.*",
    "detect-secrets==1.*",
]

[project.urls]
Homepage = "https://github.com/Maclovi/pure-architecture-fastapi"
Documentation = "https://github.com/Maclovi/pure-architecture-fastapi/README.md"
Repository = "https://github.com/Maclovi/pure-architecture-fastapi"
Issues = "https://github.com/Maclovi/pure-architecture-fastapi/issues"


[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = ["container"]
filterwarnings = []

[tool.mypy]
exclude = [".venv"]
python_version = "3.10"
strict = true
pretty = true

no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
implicit_reexport = true
namespace_packages = true
ignore_missing_imports = true

warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true

allow_untyped_calls = true
allow_subclassing_any = true
allow_untyped_decorators = true

disallow_incomplete_defs = true
disallow_any_unimported = false

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py310"
line-length = 79
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "A002",   # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "EM101",  # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/cats/infrastructure/persistence/alembic/**" = ["ERA001", "INP001"]
"src/cats/application/**" = ["S101"]
"tests/**" = ["S101"]

[lint.isort]
no-lines-before = ["local-folder"]

[tool.coverage.run]
parallel = true
branch = true
concurrency = ["multiprocessing", "thread"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    "if __name__ == .__main__.:",
    "lambda: None",
    "from .*",
    "import .*",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = [
    '*/__main__.py',
    '*/__init__.py',
]
