[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "cats"
dynamic = ["version"]
description = "Simple api cats"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Sergey Yavorsky", email = "maclovi.dev@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "dishka==1.4.2",
    "uvloop==0.21.0",
    "orjson==3.10.15",
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "httptools==0.6.4",
    "alembic==1.15.1",
    "sqlalchemy[asyncio]==2.0.39",
    "psycopg[binary]==3.2.6",
    "python-json-logger==3.3.0",
]

[project.optional-dependencies]
test = [
    "coverage[toml]==7.7.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1",
]
lint = [
    "ruff==0.11.0",
    "bandit==1.8.3",
    "semgrep==1.112.0",
    "codespell==2.4.1",
    #types
    "mypy==1.15.0",
    "basedpyright==1.28.1",
]
dev = [
    "cats[test,lint]",
    "pre-commit==4.1.0",
    "detect-secrets==1.5.0",
]

[project.urls]
Homepage = "https://github.com/Maclovi/pure-architecture-fastapi"
Documentation = "https://github.com/Maclovi/pure-architecture-fastapi/README.md"
Repository = "https://github.com/Maclovi/pure-architecture-fastapi"
Issues = "https://github.com/Maclovi/pure-architecture-fastapi/issues"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = ["value_objects"]

[tool.basedpyright]
include = ["src", "tests"]
ignore = ["**/__pycache__", "**/alembic"]
pythonVersion = "3.10"
reportAny = false

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
python_version = "3.10"

strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py310"
line-length = 79
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "CPY001", "A005"]

[tool.ruff.lint.per-file-ignores]
"src/cats/infrastructure/persistence/alembic/**" = ["ERA001", "INP001"]
"tests/**" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]

[tool.coverage.run]
parallel = true
branch = true
concurrency = ["thread", "multiprocessing"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    'if TYPE_CHECKING:',
    "if __name__ == .__main__.:",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = [
    'src/cats/infrastructure/persistence/alembic/env.py',
    'src/cats/presentation/http/middlewares/tracing.py',
    'src/cats/infrastructure/adapters/breed.py',
    'src/cats/infrastructure/adapters/cat.py',
    '*/__init__.py',
]

[tool.semgrep]
paths = ["src"]
include = ["src"]

[tool.bandit]
targets = "src"

[tool.codespell]
skip = "*.pyi,*.pyc,*.csv"
